--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ include(ExternalProject)
 project(clong)
 set(CLONG_ROOT ${CMAKE_SOURCE_DIR})
 set(LLVM_ROOT /usr/local/opt/llvm)
-set(THIRD_PARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party)
+set(THIRD_PARTY_DIR ${CLONG_ROOT}/third_party)
 set(BUILD_INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}/_install)
 
 ## Enable compile_commands.json
@@ -26,10 +26,10 @@ function(find_third_party_header_only_package PREFIX HPP PKG)
   set(PKG_DIR ${THIRD_PARTY_DIR}/${PKG})
   find_path(${PREFIX}_INCLUDE_DIR ${HPP} PATHS ${PKG_DIR} ${PKG_DIR}/include)
   if ((NOT ${PREFIX}_INCLUDE_DIR) OR (NOT EXISTS ${PKG_DIR}))
-      ## Init submodule
-      execute_process(COMMAND git submodule update --init -- ${PKG_DIR})
-      set(${PREFIX}_INCLUDE_DIR ${PKG_DIR}
-          CACHE PATH "${PKG} include directory")
+    ## Init submodule
+    execute_process(COMMAND git submodule update --init -- ${PKG_DIR})
+    set(${PREFIX}_INCLUDE_DIR ${PKG_DIR}
+      CACHE PATH "${PKG} include directory")
   endif()
 endfunction()
 
@@ -40,21 +40,21 @@ function(find_third_party_package PREFIX DEP PKG OPTS)
   set(PKG_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR}/_third_party/${PKG})
   find_path(${PREFIX}_FOUND ${HPP} PATHS ${BUILD_INSTALL_DIR})
   if ((NOT ${PREFIX}_FOUND) OR (NOT EXISTS ${PKG_DIR}))
-      ## Init submodule and prepare for build
-      execute_process(COMMAND git submodule update --init -- ${PKG_DIR})
-      execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${PKG_BUILD_DIR})
-      ## Tell where to install and make install messages silent
-      execute_process(COMMAND
-        ${CMAKE_COMMAND} ${PKG_DIR}
-          ${OPTS}
-          -DCMAKE_INSTALL_PREFIX=${BUILD_INSTALL_DIR}
-          -DCMAKE_INSTALL_MESSAGE=NEVER
-        WORKING_DIRECTORY ${PKG_BUILD_DIR})
-      ## Build and install
-      execute_process(COMMAND ${CMAKE_COMMAND} --build ${PKG_BUILD_DIR})
-      execute_process(COMMAND ${CMAKE_COMMAND} --build ${PKG_BUILD_DIR} --target install)
-      set(${PREFIX}_FOUND TRUE
-          CACHE PATH "${PKG} installed")
+    ## Init submodule and prepare for build
+    execute_process(COMMAND git submodule update --init -- ${PKG_DIR})
+    execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${PKG_BUILD_DIR})
+    ## Tell where to install and make install messages silent
+    execute_process(COMMAND
+      ${CMAKE_COMMAND} ${PKG_DIR}
+        ${OPTS}
+        -DCMAKE_INSTALL_PREFIX=${BUILD_INSTALL_DIR}
+        -DCMAKE_INSTALL_MESSAGE=NEVER
+      WORKING_DIRECTORY ${PKG_BUILD_DIR})
+    ## Build and install
+    execute_process(COMMAND ${CMAKE_COMMAND} --build ${PKG_BUILD_DIR})
+    execute_process(COMMAND ${CMAKE_COMMAND} --build ${PKG_BUILD_DIR} --target install)
+    set(${PREFIX}_FOUND TRUE
+      CACHE PATH "${PKG} installed")
   endif()
 endfunction()
 
@@ -84,173 +84,173 @@ include_directories(
 
 ## Sources
 file(GLOB_RECURSE clong.src
-    ${CLONG_ROOT}/src/*.cpp
+  ${CLONG_ROOT}/src/*.cpp
 )
 
 ## Link
 set(CLANG_LIBS
-    -lclangTooling
-    -lclangDriver
-    -lclangFrontend
-    -lclangParse
-    -lclangSerialization
-    -lclangSema
-    -lclangAnalysis
-    -lclangEdit
-    -lclangLex
-    -lclangAST
-    -lclangBasic
+  -lclangTooling
+  -lclangDriver
+  -lclangFrontend
+  -lclangParse
+  -lclangSerialization
+  -lclangSema
+  -lclangAnalysis
+  -lclangEdit
+  -lclangLex
+  -lclangAST
+  -lclangBasic
 )
 set(LLVM_LIBS
-    -lLLVMLTO
-    -lLLVMPasses
-    -lLLVMObjCARCOpts
-    -lLLVMMIRParser
-    -lLLVMSymbolize
-    -lLLVMDebugInfoPDB
-    -lLLVMDebugInfoDWARF
-    -lLLVMCoverage
-    -lLLVMMCA
-    -lLLVMTableGen
-    -lLLVMDlltoolDriver
-    -lLLVMXRay
-    -lLLVMOrcJIT
-    -lLLVMXCoreDisassembler
-    -lLLVMXCoreCodeGen
-    -lLLVMXCoreDesc
-    -lLLVMXCoreInfo
-    -lLLVMXCoreAsmPrinter
-    -lLLVMWebAssemblyDisassembler
-    -lLLVMWebAssemblyCodeGen
-    -lLLVMWebAssemblyDesc
-    -lLLVMWebAssemblyAsmPrinter
-    -lLLVMWebAssemblyAsmParser
-    -lLLVMWebAssemblyInfo
-    -lLLVMSystemZDisassembler
-    -lLLVMSystemZCodeGen
-    -lLLVMSystemZAsmParser
-    -lLLVMSystemZDesc
-    -lLLVMSystemZInfo
-    -lLLVMSystemZAsmPrinter
-    -lLLVMSparcDisassembler
-    -lLLVMSparcCodeGen
-    -lLLVMSparcAsmParser
-    -lLLVMSparcDesc
-    -lLLVMSparcInfo
-    -lLLVMSparcAsmPrinter
-    -lLLVMPowerPCDisassembler
-    -lLLVMPowerPCCodeGen
-    -lLLVMPowerPCAsmParser
-    -lLLVMPowerPCDesc
-    -lLLVMPowerPCInfo
-    -lLLVMPowerPCAsmPrinter
-    -lLLVMNVPTXCodeGen
-    -lLLVMNVPTXDesc
-    -lLLVMNVPTXInfo
-    -lLLVMNVPTXAsmPrinter
-    -lLLVMMSP430Disassembler
-    -lLLVMMSP430CodeGen
-    -lLLVMMSP430AsmParser
-    -lLLVMMSP430Desc
-    -lLLVMMSP430Info
-    -lLLVMMSP430AsmPrinter
-    -lLLVMMipsDisassembler
-    -lLLVMMipsCodeGen
-    -lLLVMMipsAsmParser
-    -lLLVMMipsDesc
-    -lLLVMMipsInfo
-    -lLLVMMipsAsmPrinter
-    -lLLVMLanaiDisassembler
-    -lLLVMLanaiCodeGen
-    -lLLVMLanaiAsmParser
-    -lLLVMLanaiDesc
-    -lLLVMLanaiAsmPrinter
-    -lLLVMLanaiInfo
-    -lLLVMHexagonDisassembler
-    -lLLVMHexagonCodeGen
-    -lLLVMHexagonAsmParser
-    -lLLVMHexagonDesc
-    -lLLVMHexagonInfo
-    -lLLVMBPFDisassembler
-    -lLLVMBPFCodeGen
-    -lLLVMBPFAsmParser
-    -lLLVMBPFDesc
-    -lLLVMBPFInfo
-    -lLLVMBPFAsmPrinter
-    -lLLVMARMDisassembler
-    -lLLVMARMCodeGen
-    -lLLVMARMAsmParser
-    -lLLVMARMDesc
-    -lLLVMARMInfo
-    -lLLVMARMAsmPrinter
-    -lLLVMARMUtils
-    -lLLVMAMDGPUDisassembler
-    -lLLVMAMDGPUCodeGen
-    -lLLVMAMDGPUAsmParser
-    -lLLVMAMDGPUDesc
-    -lLLVMAMDGPUInfo
-    -lLLVMAMDGPUAsmPrinter
-    -lLLVMAMDGPUUtils
-    -lLLVMAArch64Disassembler
-    -lLLVMAArch64CodeGen
-    -lLLVMAArch64AsmParser
-    -lLLVMAArch64Desc
-    -lLLVMAArch64Info
-    -lLLVMAArch64AsmPrinter
-    -lLLVMAArch64Utils
-    -lLLVMObjectYAML
-    -lLLVMLibDriver
-    -lLLVMOption
-    -lLLVMOptRemarks
-    -lLLVMWindowsManifest
-    -lLLVMTextAPI
-    -lLLVMFuzzMutate
-    -lLLVMX86Disassembler
-    -lLLVMX86AsmParser
-    -lLLVMX86CodeGen
-    -lLLVMGlobalISel
-    -lLLVMSelectionDAG
-    -lLLVMAsmPrinter
-    -lLLVMX86Desc
-    -lLLVMMCDisassembler
-    -lLLVMX86Info
-    -lLLVMX86AsmPrinter
-    -lLLVMX86Utils
-    -lLLVMMCJIT
-    -lLLVMLineEditor
-    -lLLVMInterpreter
-    -lLLVMExecutionEngine
-    -lLLVMRuntimeDyld
-    -lLLVMCodeGen
-    -lLLVMTarget
-    -lLLVMCoroutines
-    -lLLVMipo
-    -lLLVMInstrumentation
-    -lLLVMVectorize
-    -lLLVMScalarOpts
-    -lLLVMLinker
-    -lLLVMIRReader
-    -lLLVMAsmParser
-    -lLLVMInstCombine
-    -lLLVMBitWriter
-    -lLLVMAggressiveInstCombine
-    -lLLVMTransformUtils
-    -lLLVMAnalysis
-    -lLLVMProfileData
-    -lLLVMObject
-    -lLLVMMCParser
-    -lLLVMMC
-    -lLLVMDebugInfoCodeView
-    -lLLVMDebugInfoMSF
-    -lLLVMBitReader
-    -lLLVMCore
-    -lLLVMBinaryFormat
-    -lLLVMSupport
-    -lLLVMDemangle
-    -lcurses
-    -lxml2
-    -lm
-    -lz
+  -lLLVMLTO
+  -lLLVMPasses
+  -lLLVMObjCARCOpts
+  -lLLVMMIRParser
+  -lLLVMSymbolize
+  -lLLVMDebugInfoPDB
+  -lLLVMDebugInfoDWARF
+  -lLLVMCoverage
+  -lLLVMMCA
+  -lLLVMTableGen
+  -lLLVMDlltoolDriver
+  -lLLVMXRay
+  -lLLVMOrcJIT
+  -lLLVMXCoreDisassembler
+  -lLLVMXCoreCodeGen
+  -lLLVMXCoreDesc
+  -lLLVMXCoreInfo
+  -lLLVMXCoreAsmPrinter
+  -lLLVMWebAssemblyDisassembler
+  -lLLVMWebAssemblyCodeGen
+  -lLLVMWebAssemblyDesc
+  -lLLVMWebAssemblyAsmPrinter
+  -lLLVMWebAssemblyAsmParser
+  -lLLVMWebAssemblyInfo
+  -lLLVMSystemZDisassembler
+  -lLLVMSystemZCodeGen
+  -lLLVMSystemZAsmParser
+  -lLLVMSystemZDesc
+  -lLLVMSystemZInfo
+  -lLLVMSystemZAsmPrinter
+  -lLLVMSparcDisassembler
+  -lLLVMSparcCodeGen
+  -lLLVMSparcAsmParser
+  -lLLVMSparcDesc
+  -lLLVMSparcInfo
+  -lLLVMSparcAsmPrinter
+  -lLLVMPowerPCDisassembler
+  -lLLVMPowerPCCodeGen
+  -lLLVMPowerPCAsmParser
+  -lLLVMPowerPCDesc
+  -lLLVMPowerPCInfo
+  -lLLVMPowerPCAsmPrinter
+  -lLLVMNVPTXCodeGen
+  -lLLVMNVPTXDesc
+  -lLLVMNVPTXInfo
+  -lLLVMNVPTXAsmPrinter
+  -lLLVMMSP430Disassembler
+  -lLLVMMSP430CodeGen
+  -lLLVMMSP430AsmParser
+  -lLLVMMSP430Desc
+  -lLLVMMSP430Info
+  -lLLVMMSP430AsmPrinter
+  -lLLVMMipsDisassembler
+  -lLLVMMipsCodeGen
+  -lLLVMMipsAsmParser
+  -lLLVMMipsDesc
+  -lLLVMMipsInfo
+  -lLLVMMipsAsmPrinter
+  -lLLVMLanaiDisassembler
+  -lLLVMLanaiCodeGen
+  -lLLVMLanaiAsmParser
+  -lLLVMLanaiDesc
+  -lLLVMLanaiAsmPrinter
+  -lLLVMLanaiInfo
+  -lLLVMHexagonDisassembler
+  -lLLVMHexagonCodeGen
+  -lLLVMHexagonAsmParser
+  -lLLVMHexagonDesc
+  -lLLVMHexagonInfo
+  -lLLVMBPFDisassembler
+  -lLLVMBPFCodeGen
+  -lLLVMBPFAsmParser
+  -lLLVMBPFDesc
+  -lLLVMBPFInfo
+  -lLLVMBPFAsmPrinter
+  -lLLVMARMDisassembler
+  -lLLVMARMCodeGen
+  -lLLVMARMAsmParser
+  -lLLVMARMDesc
+  -lLLVMARMInfo
+  -lLLVMARMAsmPrinter
+  -lLLVMARMUtils
+  -lLLVMAMDGPUDisassembler
+  -lLLVMAMDGPUCodeGen
+  -lLLVMAMDGPUAsmParser
+  -lLLVMAMDGPUDesc
+  -lLLVMAMDGPUInfo
+  -lLLVMAMDGPUAsmPrinter
+  -lLLVMAMDGPUUtils
+  -lLLVMAArch64Disassembler
+  -lLLVMAArch64CodeGen
+  -lLLVMAArch64AsmParser
+  -lLLVMAArch64Desc
+  -lLLVMAArch64Info
+  -lLLVMAArch64AsmPrinter
+  -lLLVMAArch64Utils
+  -lLLVMObjectYAML
+  -lLLVMLibDriver
+  -lLLVMOption
+  -lLLVMOptRemarks
+  -lLLVMWindowsManifest
+  -lLLVMTextAPI
+  -lLLVMFuzzMutate
+  -lLLVMX86Disassembler
+  -lLLVMX86AsmParser
+  -lLLVMX86CodeGen
+  -lLLVMGlobalISel
+  -lLLVMSelectionDAG
+  -lLLVMAsmPrinter
+  -lLLVMX86Desc
+  -lLLVMMCDisassembler
+  -lLLVMX86Info
+  -lLLVMX86AsmPrinter
+  -lLLVMX86Utils
+  -lLLVMMCJIT
+  -lLLVMLineEditor
+  -lLLVMInterpreter
+  -lLLVMExecutionEngine
+  -lLLVMRuntimeDyld
+  -lLLVMCodeGen
+  -lLLVMTarget
+  -lLLVMCoroutines
+  -lLLVMipo
+  -lLLVMInstrumentation
+  -lLLVMVectorize
+  -lLLVMScalarOpts
+  -lLLVMLinker
+  -lLLVMIRReader
+  -lLLVMAsmParser
+  -lLLVMInstCombine
+  -lLLVMBitWriter
+  -lLLVMAggressiveInstCombine
+  -lLLVMTransformUtils
+  -lLLVMAnalysis
+  -lLLVMProfileData
+  -lLLVMObject
+  -lLLVMMCParser
+  -lLLVMMC
+  -lLLVMDebugInfoCodeView
+  -lLLVMDebugInfoMSF
+  -lLLVMBitReader
+  -lLLVMCore
+  -lLLVMBinaryFormat
+  -lLLVMSupport
+  -lLLVMDemangle
+  -lcurses
+  -lxml2
+  -lm
+  -lz
 )
 link_directories(
   ${LLVM_ROOT}/lib
