--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,22 @@
 language: c++
 
 ## Platforms
-matrix:
-    include:
-        - os: linux
-        - os: windows
-        - os: osx
+os:
+  - linux
+  - windows
+  - osx
+
+## Compilers
+compiler:
+  - clang
+  - gcc
 
 ## Build
 script:
-    - cmake --build .
-    - cmake --build . --target tests
-    - ctest .
+  - mkdir build
+  - cd build
+  - cmake ..
+  - cmake --build .
+  - cmake --build .
+  - cmake --build . --target tests
+  - ctest .
