travis: Install llvm

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
 language: c++
 
+## Packages
+addons:
+    homebrew:
+        packages:
+            - llvm
+    apt:
+        packages:
+            - llvm
+    chocolatey:
+        packages:
+            - llvm
+
 ## Platforms
 os:
   - linux
