--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ compiler:
   - gcc
 
 ## Install step
+apt:
+  sources:
+    - ubuntu-toolchain-r-test
+    - llvm-toolchain-trusty-6.0
 install:
     - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
         choco install -y llvm;
