--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
       fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt update;
-        sudo apt install llvm-dev clang-dev -y;
+        sudo apt install llvm-dev libclang-dev -y;
       fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         brew install llvm;
