--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,24 @@
 ## It seems that windows does not support `c++`, even though `cpp` works fine
 language: cpp
 
-## Platforms
-os:
-  - linux
-  - windows
-  - osx
+## Platforms setup
+matrix:
+    include:
+        - os: linux
+          env:
+            - TOOLSET_CXX=g++-8
+    include:
+        - os: linux
+          env:
+            - TOOLSET_CXX=clang++-6.0
+    include:
+        - os: windows
+          env:
+            - TOOLSET_CXX=cl.exe
+    include:
+        - os: osx
+          env:
+            - TOOLSET_CXX=clang
 ## For some reason, default osx image is not working with homebrew
 osx_image: xcode10.2
 
@@ -25,7 +38,7 @@ install:
       fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt update;
-        sudo apt install llvm-dev libclang-dev -y;
+        sudo apt install llvm-dev libclang-dev g++-8 clang-6.0 -y;
       fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         brew install llvm;
