--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,8 @@ install:
     - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
         export LLVM_TARGET="llvm+clang-8.0.0-win64-msvc-release";
         export CMAKE_ARGS="-DLLVM_ROOT=$LLVM_TARGET";
-        wget "https://ziglang.org/deps/$LLVM_TARGET.tar.xz";
-        tar xf *.tar.xz;
+        wget -nv "https://ziglang.org/deps/$LLVM_TARGET.tar.xz";
+        7z x "$LLVM_TARGET.tar.xz";
       fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt update;
