travis: Use absolute path for windows

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ addons:
 install:
     - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
         export LLVM_TARGET="llvm+clang-8.0.0-win64-msvc-release";
-        export CMAKE_ARGS="-DLLVM_ROOT=$LLVM_TARGET";
+        export CMAKE_ARGS="-DLLVM_ROOT=$(pwd)/$LLVM_TARGET";
         wget -nv "https://ziglang.org/deps/$LLVM_TARGET.tar.xz";
         7z x "$LLVM_TARGET.tar.xz";
       fi
