--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,8 @@ addons:
 ## Install step
 install:
     - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
-        export LLVM_TARGET="llvm+clang-8.0.0-win64-msvc-release";
-        export CMAKE_ARGS="-DLLVM_ROOT=$(pwd)/$LLVM_TARGET";
+        export LLVM_TARGET=llvm+clang-8.0.0-win64-msvc-release;
+        export CMAKE_ARGS=-DLLVM_ROOT=$(pwd)/$LLVM_TARGET;
         wget -nv "https://ziglang.org/deps/$LLVM_TARGET.tar.xz";
         7z x "$LLVM_TARGET.tar.xz";
       fi
@@ -47,7 +47,7 @@ install:
 script:
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_CXX_COMPILER=$TOOLSET_CXX "$CMAKE_ARGS"
+  - cmake .. -DCMAKE_CXX_COMPILER=$TOOLSET_CXX $CMAKE_ARGS
   - cmake --build .
   - cmake --build .
   - cmake --build . --target tests
