--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,7 @@ install:
         export LLVM_TARGET=llvm+clang-8.0.0-win64-msvc-release;
         export CMAKE_ARGS=-DLLVM_ROOT=$(pwd)/llvm-clang-msvc;
         wget -nv "https://ziglang.org/deps/$LLVM_TARGET.tar.xz";
-        7z x "$LLVM_TARGET.tar.xz";
-        ls;
-        mv "$LLVM_TARGET" llvm-clang-msvc;
+        7z x "$LLVM_TARGET.tar.xz" -ollvm-clang-msvc;
       fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt update;
