--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,8 @@ install:
     - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
         export LLVM_TARGET=llvm+clang-8.0.0-win64-msvc-release;
         wget -nv "https://ziglang.org/deps/$LLVM_TARGET.tar.xz";
-        7z x "$LLVM_TARGET.tar.xz" -ollvm-clang-msvc;
+        7z x "$LLVM_TARGET.tar.xz";
+        7z x "$LLVM_TARGET.tar" -ollvm-clang-msvc;
         ls llvm-clang-msvc;
       fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
