--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ addons:
 ## Install step
 install:
     - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
+        export CMAKE_ARGS="-A x64";
         export LLVM_TARGET=llvm+clang-8.0.0-win64-msvc-release;
         wget -nv "https://ziglang.org/deps/$LLVM_TARGET.tar.xz";
         7z x "$LLVM_TARGET.tar.xz";
@@ -49,7 +50,7 @@ install:
 script:
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_CXX_COMPILER=$TOOLSET_CXX -DIS_TRAVIS=ON
+  - cmake .. -DCMAKE_CXX_COMPILER=$TOOLSET_CXX -DIS_TRAVIS=ON $CMAKE_ARGS
   - cmake --build .
   - cmake --build .
   - cmake --build . --target tests
