travis: Exec manually a test

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,4 +57,5 @@ script:
     fi
   - cmake --build . $CMAKE_BUILD_ARGS
   - cmake --build . --target tests $CMAKE_BUILD_ARGS
+  - ./tests.empty
   - ctest .
