--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ install:
     - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
         export CMAKE_ARGS="-A x64 -DCMAKE_BUILD_TYPE=Release";
         export CMAKE_BUILD_ARGS="--config Release"
+        export CTEST_ARGS="-C Release"
         export LLVM_TARGET=llvm+clang-8.0.0-win64-msvc-release;
         wget -nv "https://ziglang.org/deps/$LLVM_TARGET.tar.xz";
         7z x "$LLVM_TARGET.tar.xz";
@@ -57,5 +58,5 @@ script:
     fi
   - cmake --build . $CMAKE_BUILD_ARGS
   - cmake --build . --target tests $CMAKE_BUILD_ARGS
-  - ./tests.empty
-  - ctest .
+  - ls
+  - ctest . $CTEST_ARGS
