--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,9 @@ script:
   - mkdir build
   - cd build
   - cmake .. -DCMAKE_CXX_COMPILER=$TOOLSET_CXX -DIS_TRAVIS=ON $CMAKE_ARGS
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
+      cp _install/bin/gtest*.dll .;
+    fi
   - cmake --build . $CMAKE_BUILD_ARGS
   - cmake --build . --target tests $CMAKE_BUILD_ARGS
   - ctest . $CTEST_ARGS
