travis: Try to speedup windows build

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,11 +33,7 @@ install:
         export CMAKE_ARGS="-A x64 -DCMAKE_BUILD_TYPE=Release";
         export CMAKE_BUILD_ARGS="--config Release"
         export CTEST_ARGS="-C Release"
-        export LLVM_TARGET=llvm+clang-8.0.0-win64-msvc-release;
-        wget -nv "https://ziglang.org/deps/$LLVM_TARGET.tar.xz";
-        7z x "$LLVM_TARGET.tar.xz";
-        7z x "$LLVM_TARGET.tar";
-        mv $LLVM_TARGET llvm-clang-msvc;
+        git clone git@github.com:ccharly/clong.llvm-clang-8.0.0-win64-msvc-release-minimal.git llvm-clang-msvc
       fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt update;
