--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,9 @@ addons:
 install:
     - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
         export CMAKE_ARGS="-A x64 -DCMAKE_BUILD_TYPE=Release";
-        export CMAKE_BUILD_ARGS="--config Release"
-        export CTEST_ARGS="-C Release"
-        git clone git@github.com:ccharly/clong.llvm-clang-8.0.0-win64-msvc-release-minimal.git llvm-clang-msvc
+        export CMAKE_BUILD_ARGS="--config Release";
+        export CTEST_ARGS="-C Release";
+        git clone git@github.com:ccharly/clong.llvm-clang-8.0.0-win64-msvc-release-minimal.git llvm-clang-msvc;
       fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt update;
