--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ install:
         sudo apt install llvm-dev libclang-dev g++-8 clang-6.0 -y;
       fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-        brew install llvm;
+        HOMEBREW_NO_AUTO_UPDATE=1 brew install llvm;
       fi
 
 ## Build
